TDLR-534 fix for vote-nodata formatting to align right

--- a/app/assets/stylesheets/election.css.scss
+++ b/app/assets/stylesheets/election.css.scss
@@ -51,6 +51,9 @@ table.election-results-table {
     .vote {
       text-align: right;
     }
+    .vote-nodata {
+      text-align: right;
+    }
     thead {
       background-color: #ECECDA;
       tr.candidate-row {
